@@ -3,7 +3,7 @@
 AUTOMAKE_OPTIONS = 1.4 foreign
 
 EXTRA_DIST = \
-	brp-compress brp-strip brp-strip-comment-note \
+	brp-compress brp-redhat brp-strip brp-strip-comment-note \
 	check-prereqs convertrpmrc.sh find-lang.sh find-prov.pl find-req.pl \
 	cpanflute find-provides.perl find-requires.perl \
 	freshen.sh get_magic.pl getpo.sh http.req magic.prov magic.req \
@@ -16,9 +16,14 @@ all:
 
 configdir = ${prefix}/lib/rpm
 config_SCRIPTS = \
-	brp-compress brp-strip brp-strip-comment-note \
+	brp-compress brp-redhat brp-strip brp-strip-comment-note \
 	check-prereqs convertrpmrc.sh find-lang.sh find-prov.pl find-req.pl \
 	cpanflute find-provides.perl find-requires.perl \
 	freshen.sh get_magic.pl getpo.sh http.req magic.prov magic.req \
 	perl.prov perl.req rpmdiff rpmdiff.cgi u_pkg.sh \
 	vpkg-provides.sh vpkg-provides2.sh
+
+brp-redhat: brp-redhat.in ../config.status
+	cd .. \
+	  && CONFIG_FILES=$(subdir)/$@ CONFIG_HEADERS= \
+		$(SHELL) ./config.status
